--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ svg{
   transform: translate(10px,0px);
   width: 60px;
   margin-left:-12.5px;
-} 
+}
 .active{
   transform: translate(10px,0px);
   animation: activeAni 5s infinite;
@@ -60,7 +60,7 @@ button{
   0%   {box-shadow:0px 0px 20px 10px red ; margin-left: 0px}
   15%  {box-shadow:0px 0px 20px 10px blue;width:80px; margin-left: 0px;}
   100% {box-shadow:0px 0px 20px 10px red ; margin-left: -10px}
-} 
+}
 @keyframes activeAni {
   0%   {box-shadow:0px 0px 20px 10px red;}
   50%  {box-shadow:0px 0px 20px 10px blue;}
@@ -102,7 +102,7 @@ img.cs{
   text-align: center;
   line-height:40px;
   display:flex;
-} 
+}
 svg{
   width:230px;
 }
@@ -154,3 +154,46 @@ svg{
   border: 1px solid black;
   transtion:2s;
 }
+#sem2List{
+  width:208px;
+  margin-left:10px;
+  margin-top:-15px;
+  border: 1px solid black;
+  transtion:2s;
+} #sem3List{
+  width:208px;
+  margin-left:10px;
+  margin-top:-15px;
+  border: 1px solid black;
+  transtion:2s;
+} #sem4List{
+  width:208px;
+  margin-left:10px;
+  margin-top:-15px;
+  border: 1px solid black;
+  transtion:2s;
+} #sem5List{
+  width:208px;
+  margin-left:10px;
+  margin-top:-15px;
+  border: 1px solid black;
+  transtion:2s;
+} #sem6List{
+  width:208px;
+  margin-left:10px;
+  margin-top:-15px;
+  border: 1px solid black;
+  transtion:2s;
+} #sem7List{
+  width:208px;
+  margin-left:10px;
+  margin-top:-15px;
+  border: 1px solid black;
+  transtion:2s;
+} #sem8List{
+  width:208px;
+  margin-left:10px;
+  margin-top:-15px;
+  border: 1px solid black;
+  transtion:2s;
+} 
