--- a/style.css
+++ b/style.css
@@ -14,17 +14,25 @@
   width:70px;
   z-index:100;
 }
-svg{
-  position:fixed;
-  overflow:hidden;
-  height:80px;
-  margin-top:10px;
-  margin-left:50px;;
-  width:100px;
+.switch{
+  height: 40px;
+  width: 100px;
+  margin-top: 20px;
+  margin-left: 30px;
+  background: linear-gradient(110deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
 }
 .bookmark{
+  height:80px;
+  width:auto;
+  position:fixed;
   overflow:hidden;
-  height:10px;
+  top: 0px;
+  left: 220px;
+}
+svg{
+  z-index: -1;
+  height:inherit;
+  margin: 0 0;
 }
 .filenames{
   margin-left:70px;
@@ -53,7 +61,7 @@ svg{
   margin-left:-12.5px;
 }
 button{
-  text-align: right;
+  text-align: center;
   background:none;
   border:none;
 } button:focus{
@@ -93,10 +101,8 @@ img.cs{
   border-radius:0px 0px 10px 0px;
 /*   box-shadow:-2px -2px 0px; */
 }
-.bookmark{
-  z-index:-1;
-  margin-top:-10px;
-  height:83px;
+.semester{
+  margin-top:40px;
 }
 .semesters{
   margin:14.62px 0px;
@@ -109,14 +115,9 @@ img.cs{
   display:flex;
   border: 3px solid #c0c0ff;
 } 
-svg{
-  width:230px;
-}
+
 .num{
   width:155px;
-}
-.semester {
-  margin-top:20px;
 }
 
 .bars{
@@ -164,89 +165,21 @@ svg{
 .hide{
   display:none;
 }
-#sem1List{
+#sem1List,#sem2List,#sem3List,
+#sem4List,#sem5List,#sem6List,
+#sem7List,#sem8List{
   width:204px;
   margin-left:10px;
   margin-top:-15px;
   border: 1px solid black;
-  transtion:2s;
   padding:5px;
 } 
-#sem2List{
-  width:204px;
-  margin-left:10px;
-  margin-top:-15px;
-  border: 1px solid black;
-  transtion:2s;
-  padding:5px;
-} #sem3List{
-  width:204px;
-  margin-left:10px;
-  margin-top:-15px;
-  border: 1px solid black;
-  transtion:2s;
-  padding:5px;
-} #sem4List{
-  width:204px;
-  margin-left:10px;
-  margin-top:-15px;
-  border: 1px solid black;
-  transtion:2s;
-  padding:5px;
-} #sem5List{
-  width:204px;
-  margin-left:10px;
-  margin-top:-15px;
-  border: 1px solid black;
-  transtion:2s;
-  padding:5px;
-} #sem6List{
-  width:204px;
-  margin-left:10px;
-  margin-top:-15px;
-  border: 1px solid black;
-  transtion:2s;
-  padding:5px;
-} #sem7List{
-  width:204px;
-  margin-left:10px;
-  margin-top:-15px;
-  border: 1px solid black;
-  transtion:2s;
-  padding:5px;
-} #sem8List{
-  width:204px;
-  margin-left:10px;
-  margin-top:-15px;
-  border: 1px solid black;
-  transtion:2s;
-  padding-left:5px;
-} 
-#coe{
+#coe,#it, #ece, 
+#ice, #mpae, #bt{
   background: linear-gradient(110deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
   box-shadow:2.5px 3px 0px #8504d4, -2px 3px 0px 0px #b102d8,-2px 2px 0px 0px #b102d8;
   border-radius:5px 50px 50px 5px;
-} #it{
-  background: linear-gradient(130deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
-  box-shadow:2.5px 3px 0px #8504d4, -2px 3px 0px 0px #b102d8,-2px 2px 0px 0px #b102d8;
-  border-radius:5px 50px 50px 5px;
-} #ece{
-  background: linear-gradient(150deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
-  box-shadow:2.5px 3px 0px #8504d4, -2px 3px 0px 0px #b102d8,-2px 2px 0px 0px #b102d8;
-  border-radius:5px 50px 50px 5px;
-} #ice{
-  background: linear-gradient(-150deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
-  box-shadow:2.5px 3px 0px #8504d4, -2px 3px 0px 0px #5916e0,-2px 2px 0px 0px #5916e0;
-  border-radius:5px 50px 50px 5px;
-} #mpae{
-  background: linear-gradient(-130deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
-  box-shadow:2.5px 3px 0px #8504d4, -2px 3px 0px 0px #5916e0,-2px 2px 0px 0px #5916e0;
-  border-radius:5px 50px 50px 5px;
-} #bt{
-  background: linear-gradient(-110deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
-  box-shadow:2.5px 3px 0px #8504d4, -2px 3px 0px 0px #5916e0,-2px 2px 0px 0px #5916e0;
-  border-radius:5px 50px 50px 5px;
-}
+} 
 
 a {
   display:block;
