--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   height: 480px;
   overflow:auto;
   display:flex;
-  background-color:#f0f0d0;
+  color:white;
+  background-color:#000000;
   border-radius:5px;
   box-shadow:3px 5px 0px 0px black,3px 4px 0px 0px black,3px 3px 0px 0px,3px 2px 0px 0px black,2px 5px 0px 0px,1px 5px 0px 0px;
 }
@@ -17,9 +18,16 @@
 .switch{
   height: 40px;
   width: 100px;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-left: 30px;
-  background: linear-gradient(110deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
+  background: linear-gradient(140deg,#c112e8,#b102d8,#5916e0,#6926f0);
+  box-shadow: 8px 10px 20px #eee, 0px 8px 20px #eee, 4px 8px 20px #eee;
+  border-radius:5px 5px 5px 5px;
+}
+.switch:hover{
+  transition-duration: 0.5s;
+  transform: translateY(8px);
+  box-shadow:0px 4px 20px #eee, 4px 4px 20px #eee, -4px 4px 20px #eee;
 }
 .bookmark{
   height:80px;
@@ -53,7 +61,7 @@ svg{
   transform: translate(10px,0px);
   width: 60px;
   margin-left:-12.5px;
-} 
+}
 .active{
   transform: translate(10px,0px);
   animation: activeAni 5s infinite;
@@ -68,10 +76,10 @@ button{
   outline:none;
 }
 @keyframes streamAni{
-  0%   {box-shadow:0px 0px 10px 5px red ; margin-left: 0px}
-  15%  {box-shadow:0px 0px 10px 5px blue;width:80px; margin-left: 0px;}
+  0%   {box-shadow:0px 0px 10px 5px red ; margin-left: -8px}
+  15%  {box-shadow:0px 0px 10px 5px blue;width:80px; margin-left: -15px;}
   100% {box-shadow:0px 0px 10px 5px red ; margin-left: -10px}
-} 
+}
 @keyframes activeAni {
   0%   {box-shadow:0px 0px 10px 5px red;}
   50%  {box-shadow:0px 0px 10px 5px blue;}
@@ -101,20 +109,32 @@ img.cs{
   border-radius:0px 0px 10px 0px;
 /*   box-shadow:-2px -2px 0px; */
 }
+.topBar{
+  margin-top:7.5px;
+  margin-left:-17.5px;
+  height:70.5px;
+  width: 250px;
+  z-index:100;
+  background-color: black;
+  position:fixed;
+}
 .semester{
-  margin-top:40px;
+  margin-top:94px;
+/* overflow:hidden; */
+  width:210px;
+
 }
 .semesters{
   margin:14.62px 0px;
   margin-left:10px;
   height:40px;
   width: 210px;
-  background: linear-gradient(-10deg,#d0d0ff,#d0ffd0,#ffd0d0,#ffd0d0,#d0ffd0,#d0d0ff);
+  background: linear-gradient(30deg,#6926f0,#f0a0aa);
   text-align: center;
   line-height:40px;
   display:flex;
   border: 3px solid #c0c0ff;
-} 
+}
 
 .num{
   width:155px;
@@ -136,19 +156,20 @@ img.cs{
   z-index:-10;
 }
 .bar1{
-  background: linear-gradient(90deg,#d0d0ff,#d0ffd0,#ffd0d0,#ffd0d0,#d0ffd0,#d0d0ff);
+  background: linear-gradient(90deg,#c112e8,#c112e8,#6926f0);
   border: 1px solid #a0a0c0;
 } .bar2{
-  background:#d0d0ff;
+  background: linear-gradient(90deg,#6926f0,#c112e8,#6926f0);
   border: 1px solid #a0a0c0;
 } .bar3{
-  background: linear-gradient(90deg,#d0d0ff,#d0ffd0,#ffd0d0,#ffd0d0,#d0ffd0,#d0d0ff);
+  background: linear-gradient(90deg,#6926f0,#c112e8,#c112e8);
   border: 1px solid #a0a0c0;
 }
 
 .change .bar1 {
     -webkit-transform: rotate(-45deg) translate(-19px, -3px);
     transform: rotate(-45deg) translate(-19px, -3px);
+    background: linear-gradient(90deg,#c112e8,#6926f0,#c112e8);
 }
 
 .change .bar2 {opacity: 0;}
@@ -156,6 +177,7 @@ img.cs{
 .change .bar3 {
     -webkit-transform: rotate(45deg) translate(-4px, -13px);
     transform: rotate(45deg) translate(-4px, -13px);
+    background: linear-gradient(90deg,#c112e8,#6926f0,#c112e8);
 }
 .streamsLogo{
   width:30px;
@@ -173,17 +195,17 @@ img.cs{
   margin-top:-15px;
   border: 1px solid black;
   padding:5px;
-} 
-#coe,#it, #ece, 
+}
+#coe,#it, #ece,
 #ice, #mpae, #bt{
-  background: linear-gradient(110deg,#c112e8,#b102d8,#ddd,#5916e0,#6926f0);
+  background: linear-gradient(140deg,#c112e8,#b102d8,#5916e0,#6926f0);
   box-shadow:2.5px 3px 0px #8504d4, -2px 3px 0px 0px #b102d8,-2px 2px 0px 0px #b102d8;
   border-radius:5px 50px 50px 5px;
-} 
+}
 
 a {
   display:block;
-  color:#9514e4;  
+  color:#9514e4;
   background-color:#ddd;
   margin: 0px auto;
   margin-bottom:-15px;
